Added pre tag for profile-about section, Modified genre/tag show views

--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -7,3 +7,13 @@
     padding-left: 10px;
   }
 }
+
+.pre-style {
+  overflow: visible;
+  white-space: pre-wrap;
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  background-color: transparent;
+  color: #fff;
+  border: none;
+}
