--- a/app/views/welcome/musician_list.html.erb
+++ b/app/views/welcome/musician_list.html.erb
@@ -5,26 +5,9 @@
       <h2 class="text-center">Musicians</h2>
     </div>
     <div class="text-right" style="color: #7C8792;">
-      <small><i class="fa fa-music" aria-hidden="true"></i> Number of concerts </small> |
-      <small><i class="fa fa-bookmark" aria-hidden="true"></i> Number of concert bookmarks </small>
+      <small><i class="fa fa-music" aria-hidden="true"></i> No. concerts </small> |
+      <small><i class="fa fa-bookmark" aria-hidden="true"></i> No. bookmarks </small>
     </div>
-    <div class="space-top-sm">
-      <table class="table">
-        <% visible_profiles.each do |profile| %>
-          <tr>
-            <td class="text-right">
-              <% if profile.avatar? %>
-                <%= image_tag(profile.avatar.sm.url, id: 'photo') %>
-              <% else %>
-                <%= image_tag("/fallback/default_sm.png", id: 'photo') %>
-              <% end %>
-            </td>
-            <td><%= link_to profile.user.username, [profile.user, profile] %></td>
-            <td><i class="fa fa-heart" aria-hidden="true"></i> <%= profile.favorites.count %></td>
-            <td><i class="fa fa-music" aria-hidden="true"></i> <%= profile.user.concerts.count %> <small class="margin-left-sm" style="color: #7C8792;"><i class="fa fa-bookmark" aria-hidden="true"></i> <%= profile.user.bookmarks.count %></small></td>
-          </tr>
-        <% end %>
-      </table>
-    </div>
+    <%= render 'musicians', { profiles: visible_profiles } %>
   </div>
 </div>
