--- a/app/views/favorites/_like.html.erb
+++ b/app/views/favorites/_like.html.erb
@@ -1,3 +1,7 @@
-<%= link_to [profile, Favorite.new], class: 'icon-empty', method: :post, remote: true do %>
+<% if current_user %>
+  <%= link_to [profile, Favorite.new], class: 'icon-empty', method: :post, remote: true do %>
+    <i class="fa fa-heart-o" aria-hidden="true"></i> <%= profile.favorites.count %>
+  <% end %>
+<% else %>
   <i class="fa fa-heart-o" aria-hidden="true"></i> <%= profile.favorites.count %>
 <% end %>
