Modified main page and Created sidebar with active class and Created Saved musicians, concerts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,6 +63,11 @@ a:hover, a:focus, table a:not(.btn):hover, .table a:not(.btn):focus {
   text-decoration: none;
   color: #FF6600;
 }
+.alert {
+  padding: 12px;
+  font-size: 15px;
+  text-align: center;
+}
 
 // Custom Style
 .line-divider {
