--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -9,8 +9,8 @@
       <% end %>
     </div>
     <div class="text-right" style="color: #7C8792; margin-bottom: 10px;">
-      <small><i class="fa fa-music" aria-hidden="true"></i> No. concerts </small> |
-      <small><i class="fa fa-bookmark" aria-hidden="true"></i> No. bookmarks </small>
+      <small><i class="fa fa-music" aria-hidden="true"></i> concerts </small> |
+      <small><i class="fa fa-bookmark" aria-hidden="true"></i> bookmarks </small>
     </div>
 
     <div class="panel panel-default">
