--- a/app/views/welcome/musician_list.html.erb
+++ b/app/views/welcome/musician_list.html.erb
@@ -5,8 +5,8 @@
       <h2 class="text-center">Musicians</h2>
     </div>
     <div class="text-right" style="color: #7C8792;">
-      <small><i class="fa fa-music" aria-hidden="true"></i> No. concerts </small> |
-      <small><i class="fa fa-bookmark" aria-hidden="true"></i> No. bookmarks </small>
+      <small><i class="fa fa-music" aria-hidden="true"></i> concerts </small> |
+      <small><i class="fa fa-bookmark" aria-hidden="true"></i> bookmarks </small>
     </div>
     <%= render 'musicians', { profiles: visible_profiles } %>
   </div>
