--- a/app/views/concerts/_search.html.erb
+++ b/app/views/concerts/_search.html.erb
@@ -14,26 +14,29 @@
   <% end %>
 
   <% if concerts.present? %>
-    <ul>
-      <% for concert in concerts %>
-        <% if concert.respond_to? :distance %>
-          <li><%= link_to concert.title, [concert.user, concert] %> (<%= concert.distance.round(2) %> miles)</li>
-        <% end %>
-      <% end %>
-    </ul>
+    <div class="row" style="margin: 50px 10px;">
+      <div class="col-md-4 text-left">
+        <ul style="padding-left: 0;">
+          <% for concert in concerts %>
+            <% if concert.respond_to? :distance %>
+              <li><%= link_to concert.title, [concert.user, concert] %> (<%= concert.distance.round(2) %> miles)</li>
+            <% end %>
+          <% end %>
+        </ul>
+      </div>
+      <div class="col-md-8">
+        <div id="map" style="max-width: 700px; height: 400px;"></div>
+        <script type="text/javascript">
+        handler = Gmaps.build('Google');
+        handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+          markers = handler.addMarkers(<%=raw @hash.to_json %>);
+          handler.bounds.extendWith(markers);
+          handler.fitMapToBounds();
+        });
+        </script>
+      </div>
+    </div> <!-- /.row -->
 
-    <div class="space-top">
-      <div id="map" style="max-width: 700px; height: 400px;"></div>
-    </div>
-
-    <script type="text/javascript">
-      handler = Gmaps.build('Google');
-      handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-        markers = handler.addMarkers(<%=raw @hash.to_json %>);
-        handler.bounds.extendWith(markers);
-        handler.fitMapToBounds();
-      });
-    </script>
   <% elsif params[:search] %>
     <p>Sorry, no concerts nearby.</p>
   <% end %>
