--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,8 @@
               <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %> <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to 'Saved Music', '#' %></li>
+                  <li><%= link_to 'Saved Musicians', user_profiles_path(current_user) %></li>
+                  <li><%= link_to 'Saved Concerts', user_concerts_path(current_user) %></li>
                   <li role="separator" class="divider"></li>
                   <% if user_profile && user_profile.id %>
                     <li><%= link_to 'My Musician Profile', [current_user, user_profile] %></li>
