--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,12 +1,6 @@
 <div class="row" id="user-sidebar">
   <div class="col-md-4">
-    <div class="list-group">
-      <%= link_to 'Saved Music', '#', class: "list-group-item" %>
-      <%= link_to 'New Musician Profile', new_user_profile_path(@user), class: "list-group-item active" %>
-      <% if premium_or_admin?(@user) %>
-        <%= link_to 'Upload My Music', user_songs_path(@user), class: "list-group-item" %>
-      <% end %>
-    </div> <!-- /.list-group -->
+    <%= render 'profiles/sidebar' %>     
   </div> <!-- /.col-md-5 -->
 
   <div class="col-md-8">
