--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
     <% end %>
   </div> <!-- /.flash -->
 
-  <div class="container">
+  <div id="main" class="container">
     <nav class="navbar navbar-reverse">
       <div class="container-fluid">
         <div class="navbar-header">
