--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -102,7 +102,7 @@ section {
   margin: 30px 0;
 }
 footer {
-  margin: 50px auto;
+  margin: 80px auto 30px;
 }
 h1, h2, h3 {
   margin-top: 10.5px;
@@ -140,4 +140,7 @@ img {
 }
 .icon-full {
   padding: 5px 10px;
+}
+#main {
+  min-height: 650px;
 }
