ch23-counter-cache-review: completed

--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -13,7 +13,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">Musicians</div>
       <% if @tag.profiles.any? %>
-        <%= render 'welcome/musicians', { profiles: @tag.profiles } %>
+        <%= render 'welcome/musicians', { profiles: @tag.profiles.by_favorites } %>
       <% else %>
         <p class="margin-left-sm" style="padding: 5px 0;">No musicians for this tag</p>
       <% end %>
