--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,81 +9,18 @@
 </head>
 <body>
   <div class="flash">
-    <% if flash[:notice] %>
-      <div class="alert alert-success">
+    <% flash.each do |key, value| %>
+      <div class="alert <%= flash_class(key) %>">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <%= flash[:notice] %>
-      </div>
-    <% elsif flash.now[:alert] %>
-      <div class="alert alert-danger">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <%= flash.now[:alert] %>
-      </div>
-    <% elsif flash[:alert] %>
-      <div class="alert alert-warning">
-        <button type='button' class='close' data-dismiss='alert'>&times;</button>
-        <%= flash[:alert] %>
+        <%= value %>
       </div>
     <% end %>
-  </div> <!-- /.flash -->
+  </div>
 
   <div id="main" class="container">
-    <nav class="navbar navbar-reverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-div" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <%= link_to "MusicApp", root_path, class: 'navbar-brand' %>
-        </div> <!-- /.navbar-header -->
-
-        <div class="collapse navbar-collapse" id="navbar-collapse-div">
-          <ul class="nav navbar-nav">
-            <li><%= link_to 'Premium', new_charge_path %></li>
-            <li><%= link_to 'Musicians', musician_list_path %></li>
-            <li><%= link_to 'Concerts', concert_list_path %></li>
-          </ul> <!-- /.navbar-nav -->
-
-          <ul class="nav navbar-nav navbar-right">
-            <% if user_signed_in? %>
-              <% if user_profile && user_profile.avatar? %>
-                <%= image_tag(user_profile.avatar.sm.url, id: 'photo') %>
-              <% else %>
-                <%= image_tag("/fallback/default_sm.png", id: 'photo') %>
-              <% end %>
-              <li class="dropdown">
-                <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %> <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><%= link_to 'Saved Musicians', user_profiles_path(current_user) %></li>
-                  <li><%= link_to 'Saved Concerts', user_concerts_path(current_user) %></li>
-                  <li role="separator" class="divider"></li>
-                  <% if user_profile && user_profile.id %>
-                    <li><%= link_to 'My Musician Profile', [current_user, user_profile] %></li>
-                  <% else %>
-                    <li><%= link_to 'New Musician Profile', new_user_profile_path(current_user) %></li>
-                  <% end %>
-                  <% if premium_or_admin?(current_user) %>
-                    <li><%= link_to 'Upload My Music', user_songs_path(current_user), class: "list-group-item" %></li>
-                  <% end %>
-                  <li role="separator" class="divider"></li>
-                  <li><%= link_to 'Login Settings', edit_user_registration_path %></li>
-                  <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
-                </ul>
-              </li> <!-- /.dropdown -->
-            <% else %>
-              <li><%= link_to 'Login', new_user_session_path %></li>
-              <li><%= link_to 'Sign Up', new_user_registration_path %></li>
-            <% end %>
-          </ul> <!-- /.navbar-right -->
-        </div> <!-- /.navbar-collapse -->
-      </div> <!-- /.container-fluid -->
-    </nav>
-
+    <%= render 'layouts/nav' %>
     <%= yield %>
-  </div> <!-- /.container -->
+  </div>
 
   <footer>
 		<div class="text-center">
