--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -50,7 +50,7 @@
       <li><%= phone_number_format(@concert.phone_number) %></li>
     </ul>
     <hr>
-    <p><%= @concert.body %></p>
+    <pre class="pre-style"><%= @concert.body %></pre>
   </div>
   <div class="col-md-7">
     <div id="map" style="max-width: 700px; height: 400px;"></div>
