--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,7 +32,7 @@
       </div>
 
       <div class="actions pull-right">
-        <%= f.submit "Sign up as Listener", class: 'btn btn-success' %>
+        <%= f.submit "Sign up", class: 'btn btn-success' %>
       </div>
     <% end %>
   </div> <!-- /.col-md-4 -->
