--- a/app/views/concerts/_search.html.erb
+++ b/app/views/concerts/_search.html.erb
@@ -1,5 +1,5 @@
 <script src="//maps.google.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>" type="text/javascript"></script>
-<script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js"></script>
+<script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
 
 <section id="nearby-concerts-search">
   <h2><small><i class="fa fa-search" aria-hidden="true"></i></small> Nearby concerts</h2>
