--- a/app/views/concerts/_search.html.erb
+++ b/app/views/concerts/_search.html.erb
@@ -3,6 +3,7 @@
 
 <section id="nearby-concerts-search">
   <h2><small><i class="fa fa-search" aria-hidden="true"></i></small> Nearby concerts</h2>
+  <p class="text-faded">Enter city name or zipcode. (e.g., san francisco)</p>
   <%= form_tag root_path, method: :get do %>
   <%= label_tag :search, nil, class: 'sr-only' %>
   <%= text_field_tag :search, params[:search], placeholder: 'Zip Code or City' %>
