--- a/app/views/concerts/_table.html.erb
+++ b/app/views/concerts/_table.html.erb
@@ -3,7 +3,7 @@
     <th>When</th>
     <th>Title</th>
     <th>Location (City State)</th>
-    <th></th>
+    <th>Bookmarked</th>
   </tr>
 
   <% concerts.each do |concert| %>
