--- a/app/views/mailbox/_folders.html.erb
+++ b/app/views/mailbox/_folders.html.erb
@@ -1,7 +1,7 @@
 <ul class="nav nav-pills nav-stacked">
   <li class="<%= active_page(:inbox) %>">
     <%= link_to mailbox_inbox_path do %>
-      <span class="label label-warning pull-right">New <%= unread_messages_count %></span>
+      <span class="label label-warning pull-right" data-toggle="tooltip" data-placement="top" title="New Message"><%= unread_messages_count %></span>
       <em class="fa fa-inbox fa-lg"></em>
       <span>Inbox</span>
     <% end %>
